Prepare Code 3 (Almost Completed)